assignment finally completed

--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -12,6 +12,7 @@ https://localhost:8000/?email=tom%40gmail.com&password=123456
 The whole page refreshed as well. Why did that happen, and how can we stop it?
 
 # Answer
+This is because when a form is submitted, they automatically get used and redirect to the next page. The browser's web address changes to the value of the input of each label. To prevent the form from doing so, you use the preventDefault method.
 
 
 # Teacher Feedback
