--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -11,6 +11,6 @@ Take these 4 html buttons:
 What is the default behavior of each button when clicked?
 
 # Answer
-
+The blank first button tag will do nothing, unless it is within a form. In that case, it will submit. The button tag with the type of 'submit' will submit the form's values and  the button type with the type of reset will reset the form's values. Lastly, the button tag with a type of "button" will do nothing, whether it be within a form or out.
 
 # Teacher Feedback
