--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -2,6 +2,17 @@
 Why do you need labels for every input? What are the two ways to associate a label with an input?
 
 # Answer
+Labels help provide a label for inputs and it's easier than positioning with css. With a label, it is almost always connected to an input or whichever element you would need a label for. One way to associate a label with an input is to nest it inside:
+```html
+<label>
+  Username
+  <input type="text" name="username" />
+</label>
+```
+Or to include the "for" attribute within the label, with the same name as the id of the input:
 
-
+```html
+<label for="username-input">Username</label>
+<input id="username-input" type="text" name='username' />
+```
 # Teacher Feedback
