--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -16,3 +16,5 @@ This is because when a form is submitted, they automatically get used and redire
 
 
 # Teacher Feedback
+Score: 2/3
+Your explanation is on the right track, but it would benefit from more clarity about the default behavior of form submission.
