--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -16,3 +16,6 @@ Or to include the "for" attribute within the label, with the same name as the id
 <input id="username-input" type="text" name='username' />
 ```
 # Teacher Feedback
+Score: 2/3
+
+Your explanation covers the importance of labels and the methods of association, but it's important to provide information for attribute values matching the id of the input for proper association
