--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -1,4 +1,5 @@
 # Question
+
 Take these 4 html buttons:
 
 ```html
@@ -11,6 +12,10 @@ Take these 4 html buttons:
 What is the default behavior of each button when clicked?
 
 # Answer
-The blank first button tag will do nothing, unless it is within a form. In that case, it will submit. The button tag with the type of 'submit' will submit the form's values and  the button type with the type of reset will reset the form's values. Lastly, the button tag with a type of "button" will do nothing, whether it be within a form or out.
+
+The blank first button tag will do nothing, unless it is within a form. In that case, it will submit. The button tag with the type of 'submit' will submit the form's values and the button type with the type of reset will reset the form's values. Lastly, the button tag with a type of "button" will do nothing, whether it be within a form or out.
 
 # Teacher Feedback
+
+Score: 3/3
+This is great, but it's important to note that a button with the type submit will submit the form data to the server.
